# tzipi-app

./: .replit  Dockerfile  alembic.ini  auth.py  aws_file_utils.py  db.py  invoice_reader.py  main.py  models.py  pyproject.toml  readme.md  requirements.txt  users.py
.github/workflows/: dockerhub-push.yml
alembic/versions/: 03270031dd83_add_file_key_to_invoices.py  9825d5915eac_create_invoices_table.py  db2695f699c0_add_user_id_to_invoices.py
static/: style.css
templates/: login.html  my_invoices.html  signup.html  upload_invoice.html
